fix: icons not showing

--- a/src/components/PlayerList.css
+++ b/src/components/PlayerList.css
@@ -52,7 +52,7 @@
     margin-top: 20px;
   }
 
-  svg.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.playerIcon.css-i4bv87-MuiSvgIcon-root {
+  .player-card svg {
     display: block;
   }
 }
